elements gap fixed

--- a/blocks/elements/__container/elements__container.css
+++ b/blocks/elements/__container/elements__container.css
@@ -2,5 +2,5 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 25px 21px 26px 15px;
+  padding: 25px 21px 26px 21px;
 }
