--- a/blocks/elements/__list/elements__list.css
+++ b/blocks/elements/__list/elements__list.css
@@ -5,14 +5,13 @@
   padding: 0;
   display: grid;
   grid-template-columns: repeat(3, 282px);
-  row-gap: 17px;
-  column-gap: 20px;
+  row-gap: 20px;
+  column-gap: 17px;
 }
 
 @media screen and (max-width: 924px) {
   .elements__list {
     grid-template-columns: repeat(2,minmax(180px, 400px));
-    row-gap: 20px;
   }
 }
 
